<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeDetail">

    <TextView
        android:id="@+id/txtTituloReceta"
        android:layout_width="301dp"
        android:layout_height="82dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/recipeTitle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgRecipe"
        android:layout_width="403dp"
        android:layout_height="319dp"
        android:layout_margin="5dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/round_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloReceta"
        app:layout_constraintVertical_bias="0.145"
        app:shapeAppearanceOverlay="@style/roundImage"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtIngredients"
        android:layout_width="392dp"
        android:layout_height="103dp"
        android:layout_marginTop="28dp"
        android:text="@string/ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRecipe" />

    <TextView
        android:id="@+id/txtInstruccions"
        android:layout_width="386dp"
        android:layout_height="147dp"
        android:layout_marginBottom="36dp"
        android:text="@string/instruccions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngredients" />

</androidx.constraintlayout.widget.ConstraintLayout>